[package]
name = "dupa-space"
version = "0.0.1"
authors = ["Jan Hesko-Kołodziński <janheski@gmail.com>, Alicja Hesko-Kołodzińska"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4" 